--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,8 @@ images:
   - people_3.jpg
 ---
 
-<!DOCTYPE html>
-<html>
+<html><head>
 
-<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
@@ -21,9 +19,6 @@ images:
   <link rel="stylesheet" href="aquamarine.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <!-- Script: Make my navbar transparent when the document is scrolled to top -->
-  <script src="js/navbar-ontop.js"></script>
-  <!-- Script: Animated entrance -->
-  <script src="js/animate-in.js"></script>
 </head>
 <body class="text-center">
   <!-- Navbar -->
