--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,5 @@
 ---
 title: Products
-images:
-  - people_1.jpg
-  - people_2.jpg
-  - people_3.jpg
 data: products
 ---
 
@@ -20,7 +16,8 @@ data: products
   <link rel="stylesheet" href="aquamarine.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <!-- Script: Make my navbar transparent when the document is scrolled to top -->
-</head><body class="text-center">
+</head>
+<body class="text-center">
   <!-- Navbar -->
   <!-- Cover -->
   <!-- Parallax section -->
@@ -34,7 +31,8 @@ data: products
       </div>
       <div class="row">
  
-        <div pi-repeat="product in tshirt" class="col-6 col-lg-4 animate-in-left">
+
+        <div pi-repeat="key,product in products" class="col-6 col-lg-4 animate-in-left">
           <a href="#">
             <img src="assets/conference/{{ product.description }}" class="center-block img-fluid my-3 rounded-circle" width="300">
             <h3 class="mb-0"><b>{{product.description}}</b></h3>
@@ -48,7 +46,7 @@ data: products
 
       </div>
     </div>
-  
+  </div>
   <!-- Schedule -->
   <!-- Sponsor logos -->
   <!-- Call to action -->
@@ -60,6 +58,6 @@ data: products
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"></script>
   <!-- Script: Smooth scrolling between anchors in the same page -->
   <script src="js/smooth-scroll.js"></script>
+</body>
 
-
-</body></html>
+</html>
