--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@ data: products
 
         <div pi-repeat="key,to in tshirt" class="col-6 col-lg-4 animate-in-left" pi-if="to.price">
           <a href="#">
-            <img src="assets/conference/{{ product.description }}" class="center-block img-fluid my-3 rounded-circle" width="300">
+            <img src="assets/conference/{{ product.description }}" class="center-block img-fluid my-3 rounded-circle" width="300" pi-if="to.price">
             <h3 class="mb-0"><b>{{t.description}}</b></h3>
             <p class="text-muted">{{t.description}} </p>
           </a>
