--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,5 @@
----
-title: Products
-data: tshirt
----
 
 <html><head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
@@ -25,28 +20,20 @@ data: tshirt
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>{{title}}</h1>
+          <h1>{{title}}</h1>  
+
         </div>
       </div>
       <div class="row">
  
-        {{ "foo bar" | truncate(3) }}
-
-        <div pi-repeat="key,to in tshirt " class="col-6 col-lg-4 animate-in-left" >
+        <div pi-repeat="key,to in (tshirt) " class="col-6 col-lg-4 animate-in-left" >
           <a href="#">
-            <img src="assets/conference/{{ to.description }}" class="center-block img-fluid my-3 rounded-circle" width="300">
-            <h3 class="mb-0"><b>{{to.description}}</b></h3>
-            <p class="text-muted">{{to.price}} </p>
+            <img src="{{ to.thumbnail }}" class="center-block img-fluid my-3 rounded-circle" width="300">
+            <h3class="mb-0"><b>{{to.title}}</b></h3>
+            Price <p class="text-muted" style="text-decoration:line-through ">  {{to.price}} </p>
+            <p class="text-muted">{{to.discount}} </p>
           </a>
         </div>
-
-        {% for key,to in tshirt | dictsort('title') %}
-        <section>
-            <h1>{{ to.title }}</h1>
-        </section>
-        {% endfor %}
-
-
     </div>
 
       </div>
