--- a/src/tshirt.html
+++ b/src/tshirt.html
@@ -1,10 +1,19 @@
+---
+pagination:
+  data: tshirt
+  size: 1
+  alias: p
+permalink: "tshirt/{{ tshirt[p].title }}.html"
+---
 
 <html><head>
+  
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Conference Aquamarine - Pingendo template</title>
+  <title>{{tshirt[p].title}}</title>
   <meta name="description" content="Free Bootstrap 4 Pingendo Aquamarine template for unique events.">
   <meta name="keywords" content="Pingendo conference event aquamarine free template bootstrap 4">
   <!-- CSS dependencies -->
@@ -20,35 +29,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1></h1>  
-
+          <h1>{{tshirt[p].title}}</h1>  
         </div>
       </div>
-      <div class="row">
- 
-        <div class="col-6 col-lg-4 animate-in-left">
-          <a href="#">
-            <img src="/assets/img/people_1.jpg" class="center-block img-fluid my-3 rounded-circle" width="300">
-            <h3class="mb-0"><b>Mose</b>
-            Price <p class="text-muted" style="text-decoration:line-through ">  1110 </p>
-            <p class="text-muted">10 </p>
-          </h3class="mb-0"></a>
-        </div><div class="col-6 col-lg-4 animate-in-left">
-          <a href="#">
-            <img src="/assets/img/people_1.jpg" class="center-block img-fluid my-3 rounded-circle" width="300">
-            <h3class="mb-0"><b>Burton</b>
-            Price <p class="text-muted" style="text-decoration:line-through ">  1 </p>
-            <p class="text-muted"> </p>
-          </h3class="mb-0"></a>
-        </div>
     </div>
-
-      </div>
-
-   
-
-      </div>
-    
+  </div>
   
   <!-- Schedule -->
   <!-- Sponsor logos -->
