--- a/src/tshirt.html
+++ b/src/tshirt.html
@@ -1,10 +1,20 @@
+---
+pagination:
+  data: tshirt
+  size: 1
+  alias: p
+permalink: "tshirt/{{ tshirt[p].title }}.html"
+tags: "tshirt"
+---
 
 <html><head>
+  
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Common static template</title>
+  <title>{{tshirt[p].title}}</title>
   <meta name="description" content="Free Bootstrap 4 Pingendo Aquamarine template for unique events.">
   <meta name="keywords" content="Pingendo conference event aquamarine free template bootstrap 4">
   <!-- CSS dependencies -->
@@ -20,11 +30,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>Static Page</h1>  
-
-          <div pi-repeat="p in (collections.tshirt)" class="col-6 col-lg-4 animate-in-left">
-             <a href="{{p.url}}" >  Link a {{p.data.title}}</a>
-          </div>
+          <h1>{{tshirt[p].title}}</h1>  
         </div>
       </div>
     </div>
