--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>Static Page</h1>  
+          <h1>Static Page2</h1>  
 
           <div pi-repeat="p in (collections.tshirt)" class="col-6 col-lg-4 animate-in-left">
-             <a href="{{p.url}}" >  Link a {{p.data.title}}</a>
+             <a href="{{p.url}}">  Link a {{p.data.title}}</a>
           </div>
         </div>
       </div>
