--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>Static Page2</h1>  
+          <h1>Static Pag3e2</h1>  
 
 
 
