--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ds
+
 <html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@ ds
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>Static Pag3e2</h1>  
+          <h1>Static s</h1>  
 
 
 
@@ -32,7 +32,9 @@ ds
       </div>
     </div>
   </div>
-  
+
+  <span pi-include="/footer.html"></span>
+
   <!-- Schedule -->
   <!-- Sponsor logos -->
   <!-- Call to action -->
