--- a/index.html
+++ b/index.html
@@ -1,18 +1,5 @@
 <html>
-  <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- PAGE settings -->
-  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Common static template2</title>
-  <meta name="description" content="Free Bootstrap 4 Pingendo Aquamarine template for unique events.">
-  <meta name="keywords" content="Pingendo conference event aquamarine free template bootstrap 4">
-  <!-- CSS dependencies -->
-  <link rel="stylesheet" href="aquamarine.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <!-- Script: Make my navbar transparent when the document is scrolled to top -->
-</head><body class="text-center">
+<body class="text-center">
   <!-- Navbar -->
   <!-- Cover -->
   <!-- Parallax section -->
