--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>Static</h1>  
+          <h1>Stafgfgfgfffgfgfgfgfgtic</h1>  
           <span pi-bind="collections.tshirt[0].data.title"></span>
 
 
