--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="col">
-    <h1>STATIC INDEX </h1> 
+  <div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>STATIC INDEX </h1> 
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
